--- a/page1_en.html
+++ b/page1_en.html
@@ -84,189 +84,180 @@
     <div class="flashcard" id="flashcard-0" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>ينتقدون طريقتهم في التعبير عن أنفسهم</p></div>
-        <div class="flashcard-content flashcard-middle"><p>They criticize their way of expressing themselves</p></div>
-        <div class="flashcard-content flashcard-back"><p>En critiquant leur façon de s'exprimer</p></div>
+        <div class="flashcard-content flashcard-front"><p>موت من الجوع</p></div>
+        <div class="flashcard-content flashcard-middle"><p>To starve to death, to die of starvation</p></div>
+        <div class="flashcard-content flashcard-back"><p>Mourir de faim, mourir de la famine</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-1" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>من الواضح ، لقد وجدت قانون نوفمبر 2019 منطقيًا مقارنة بالقانون المعلن. إذا كنت في قائمة الصفقات تحت الطلب ، لم يكن لديك سوى 6 أشهر للعمل قبل تقديم طلبك وانتقل الدعوى من الساعة 1800 إلى 900 ساعة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>"It's clear, I found the November 2019 law logical compared to the one announced. If you were in the list of in-demand jobs, you only had 6 months to work before applying, and the threshold of 1800 hours was reduced to 900 hours."</p></div>
-        <div class="flashcard-content flashcard-back"><p>C'est clair, je trouvais la loi de novembre 2019 logique par rapport à celle annoncée. Si tu étais dans la liste de métiers en demande tu avais que 6 mois à travailler avant de faire ta demande et le seuil de 1800h passait à 900h.</p></div>
+        <div class="flashcard-content flashcard-front"><p>الطرف الآخر من الشارع التالي؟</p></div>
+        <div class="flashcard-content flashcard-middle"><p>On the next block of the street</p></div>
+        <div class="flashcard-content flashcard-back"><p>Au prochain pâté de maisons</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-2" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>هذا التصريح قد يسمح لهم باكتساب الخبرة اللازمة للعمل. ومع ذلك، فإن هذا التغيير قد يؤخر تقديم الطلب من خريجي كيبيك لمدة سنة أو سنتين</p></div>
-        <div class="flashcard-content flashcard-middle"><p>This permit might allow them to gain the necessary job experience. However, this change would delay by one or two years the possibility for Quebec graduates to apply for PEQ.</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ce permis pourrait, on l'espère, leur permettre d'acquérir l'expérience nécessaire d'emploi. Néanmoins, ce changement retarderait d'un ou deux ans la possibilité pour les diplômés du Québec de déposer une demande de PEQ.</p></div>
+        <div class="flashcard-content flashcard-front"><p>حتى العرسان الجدد يتجادلون أحيانًا</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Even newlyweds sometimes argue</p></div>
+        <div class="flashcard-content flashcard-back"><p>Même les jeunes mariés se disputent parfois</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-3" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>صندوق مالي</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Financial fund</p></div>
-        <div class="flashcard-content flashcard-back"><p>Fonds financier</p></div>
+        <div class="flashcard-content flashcard-front"><p>عرف زملاء روبرت أنه كان يتبع نظامًا غذائيًا ، لكنهم استمروا في إغرائه بالكعك</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Robert's colleagues knew he was on a diet, but they kept tempting him with cakes</p></div>
+        <div class="flashcard-content flashcard-back"><p>Les collègues de Robert savaient qu'il était au régime, mais ils n'arrêtaient pas de le tenter avec des gâteaux</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-4" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>ثمين</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Precious</p></div>
-        <div class="flashcard-content flashcard-back"><p>Précieux</p></div>
+        <div class="flashcard-content flashcard-front"><p>كل ما كان عليه فعله هو</p></div>
+        <div class="flashcard-content flashcard-middle"><p>All what he had to do was</p></div>
+        <div class="flashcard-content flashcard-back"><p>Tout ce qu'il avait à faire c'était</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-5" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>تجميع</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Pooling (of resources)</p></div>
-        <div class="flashcard-content flashcard-back"><p>Mutualisation</p></div>
+        <div class="flashcard-content flashcard-front"><p>أحتاج إلى الذهاب إلى المتجر لشراء بعض الحليب - هل نحتاج إلى أي شيء آخر؟</p></div>
+        <div class="flashcard-content flashcard-middle"><p>I need to pop down to the store for some milk—do we need anything else?</p></div>
+        <div class="flashcard-content flashcard-back"><p>Je dois descendre au magasin chercher du lait—avons-nous besoin de quelque chose d'autre ?</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-6" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>يجب أن يتم تقسيمه بالتساوي في العالم</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Must be divided equally in the world</p></div>
-        <div class="flashcard-content flashcard-back"><p>Doit être divisé également dans le monde</p></div>
+        <div class="flashcard-content flashcard-front"><p>لقد انتقلنا للتو إلى الطابق السفلي - يجب أن تزورنا يومًا ما!</p></div>
+        <div class="flashcard-content flashcard-middle"><p>We just moved in on the floor below—you should pop down sometime!</p></div>
+        <div class="flashcard-content flashcard-back"><p>Nous venons d'emménager à l'étage en dessous—vous devriez passer un de ces jours !</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-7" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>من الوهم</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Of illusion</p></div>
-        <div class="flashcard-content flashcard-back"><p>D'illusion</p></div>
+        <div class="flashcard-content flashcard-front"><p>كنا في هذا الجزء من المدينة ، لذلك فكرت أن نزوركم.</p></div>
+        <div class="flashcard-content flashcard-middle"><p>We were in this part of town, so I thought we'd pop down for a visit</p></div>
+        <div class="flashcard-content flashcard-back"><p>Nous étions dans ce quartier, alors je me suis dit qu'on pourrait passer vous voir</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-8" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>تهجئه</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Spell</p></div>
-        <div class="flashcard-content flashcard-back"><p>Épeler</p></div>
+        <div class="flashcard-content flashcard-front"><p>فك انسداد المصرف</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Unclog the drain</p></div>
+        <div class="flashcard-content flashcard-back"><p>Déboucher le drain</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-9" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>مقسم</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Split</p></div>
-        <div class="flashcard-content flashcard-back"><p>Divisé</p></div>
+        <div class="flashcard-content flashcard-front"><p>لقد لوّث قميصي</p></div>
+        <div class="flashcard-content flashcard-middle"><p>He stained my shirt</p></div>
+        <div class="flashcard-content flashcard-back"><p>Il a taché ma chemise</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-10" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>الاتحاد الأوروبي مات منذ انضمام الدول الشيوعية السابقة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>The European Union has died since the accession of the former communist countries</p></div>
-        <div class="flashcard-content flashcard-back"><p>L'Union européenne est morte depuis l'adhésion des anciens pays communistes</p></div>
+        <div class="flashcard-content flashcard-front"><p>إنجاز</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Accomplishment</p></div>
+        <div class="flashcard-content flashcard-back"><p>Accomplissement</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-11" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>لا يبدو أن حالتك تثير القلق.</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Your condition doesn’t seem concerning.</p></div>
-        <div class="flashcard-content flashcard-back"><p>Votre état ne semble pas préoccupant.</p></div>
+        <div class="flashcard-content flashcard-front"><p>بلاد ما بين النهرين كان اسم منطقة في الشرق الأوسط حيث نشأت الحضارة البشرية منذ آلاف السنين.</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Mesopotamia was the name of a region in the Middle East, where human civilization arose thousands of years ago.</p></div>
+        <div class="flashcard-content flashcard-back"><p>La Mésopotamie était le nom d'une région du Moyen-Orient, où la civilisation humaine a vu le jour il y a des milliers d'années.</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-12" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>التنافس</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Rivalry</p></div>
-        <div class="flashcard-content flashcard-back"><p>La rivalité</p></div>
+        <div class="flashcard-content flashcard-front"><p>ربما سمعت بالسومريين، كانوا أقوى الناس هناك فيما أصبح يعرف بمهد الحضارة.</p></div>
+        <div class="flashcard-content flashcard-middle"><p>You may have heard of the Sumerians. They were the most powerful people there—in what became known as the cradle of civilization.</p></div>
+        <div class="flashcard-content flashcard-back"><p>Vous avez peut-être entendu parler des Sumériens. Ils étaient les plus puissants de la région, dans ce qu'on appelle le berceau de la civilisation.</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-13" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>الركود</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Recession</p></div>
-        <div class="flashcard-content flashcard-back"><p>Récession</p></div>
+        <div class="flashcard-content flashcard-front"><p>ربما كان السومريون يعيشون في بيوت طينية، لكنهم كانوا متقدمين جدًا.</p></div>
+        <div class="flashcard-content flashcard-middle"><p>The Sumerians may have lived in mud houses, but they were very sophisticated.</p></div>
+        <div class="flashcard-content flashcard-back"><p>Les Sumériens vivaient peut-être dans des maisons en terre, mais ils étaient très sophistiqués.</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-14" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>جبنة مبشورة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Grated cheese</p></div>
-        <div class="flashcard-content flashcard-back"><p>Fromage râpé</p></div>
+        <div class="flashcard-content flashcard-front"><p>لقد طوروا أول نظام كتابة.</p></div>
+        <div class="flashcard-content flashcard-middle"><p>They developed the first writing system.</p></div>
+        <div class="flashcard-content flashcard-back"><p>Ils ont développé le premier système d'écriture.</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-15" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>لقد أظهر لنا هذا الفيروس الكثير</p></div>
-        <div class="flashcard-content flashcard-middle"><p>This virus has shown us a lot</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ce virus nous a montré beaucoup</p></div>
+        <div class="flashcard-content flashcard-front"><p>هي تضع القوانين هنا</p></div>
+        <div class="flashcard-content flashcard-middle"><p>She lays down the laws around here</p></div>
+        <div class="flashcard-content flashcard-back"><p>C'est elle qui fait les lois ici</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-16" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>السميد</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Semolina</p></div>
-        <div class="flashcard-content flashcard-back"><p>La semoule</p></div>
+        <div class="flashcard-content flashcard-front"><p>صادفت مقالة مثيرة للاهتمام في الجريدة اليوم</p></div>
+        <div class="flashcard-content flashcard-middle"><p>I came across an interesting article in the newspaper today</p></div>
+        <div class="flashcard-content flashcard-back"><p>J'ai trouvé un article intéressant dans le journal aujourd'hui</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-17" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>الطحين</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Flour</p></div>
-        <div class="flashcard-content flashcard-back"><p>Farine</p></div>
+        <div class="flashcard-content flashcard-front"><p>البحيرة جفت</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Lake dried up</p></div>
+        <div class="flashcard-content flashcard-back"><p>Le lac s'est asséché</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-18" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>هناك تنافس كبير بين الشركات في سوق التكنولوجيا.</p></div>
-        <div class="flashcard-content flashcard-middle"><p>There is a strong rivalry between companies in the tech market.</p></div>
-        <div class="flashcard-content flashcard-back"><p>Il y a une forte concurrence entre les entreprises sur le marché technologique.</p></div>
+        <div class="flashcard-content flashcard-front"><p>ضحك خافت</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Giggling</p></div>
+        <div class="flashcard-content flashcard-back"><p>Glousser</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-19" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>الخصومة بين الفريقين بدأت منذ سنوات.</p></div>
-        <div class="flashcard-content flashcard-middle"><p>The rivalry between the two teams began years ago.</p></div>
-        <div class="flashcard-content flashcard-back"><p>La rivalité entre les deux équipes a commencé il y a des années.</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-20" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>العداء بين الجارين أدى إلى مشاكل كثيرة.</p></div>
-        <div class="flashcard-content flashcard-middle"><p>The rivalry between the neighbors led to many problems.</p></div>
-        <div class="flashcard-content flashcard-back"><p>L'hostilité entre les voisins a causé de nombreux problèmes.</p></div>
+        <div class="flashcard-content flashcard-front"><p>لم أتحدث معه منذ سنوات</p></div>
+        <div class="flashcard-content flashcard-middle"><p>I haven't spoken to him in years</p></div>
+        <div class="flashcard-content flashcard-back"><p>Je ne lui ai pas parlé depuis des années</p></div>
       </div>
     </div>
 
