--- a/page3_en.html
+++ b/page3_en.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="manifest" href="./manifest.json">
-  <meta name="theme-color" content="#1976d2">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="./icons/icon-192.png">
-
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -84,189 +78,126 @@
     <div class="flashcard" id="flashcard-0" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>من حين إلى آخر</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Occasional</p></div>
-        <div class="flashcard-content flashcard-back"><p>Occasionnel</p></div>
+        <div class="flashcard-content flashcard-front"><p>أنا شنو غانستافد</p></div>
+        <div class="flashcard-content flashcard-middle"><p>What's in it for me</p></div>
+        <div class="flashcard-content flashcard-back"><p>Qu'est-ce que j'y gagne ?</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-1" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>غير رسمي</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Casual</p></div>
-        <div class="flashcard-content flashcard-back"><p>Informel</p></div>
+        <div class="flashcard-content flashcard-front"><p>احترم نفسك</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Behave yourself</p></div>
+        <div class="flashcard-content flashcard-back"><p>Comporte-toi bien</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-2" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>شحال دابا من كيلومتر غادي نكونوا ضربنا دابا</p></div>
-        <div class="flashcard-content flashcard-middle"><p>How many miles have we driven by now?</p></div>
-        <div class="flashcard-content flashcard-back"><p>Combien de kilomètres avons-nous parcouru maintenant ?</p></div>
+        <div class="flashcard-content flashcard-front"><p>لا تيأس</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Don't despair</p></div>
+        <div class="flashcard-content flashcard-back"><p>Ne désespère pas</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-3" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>كان كيجري بكل قصر جهده</p></div>
-        <div class="flashcard-content flashcard-middle"><p>He was running as fast as he could</p></div>
-        <div class="flashcard-content flashcard-back"><p>Il courait aussi vite qu'il pouvait</p></div>
+        <div class="flashcard-content flashcard-front"><p>أشعر بالغثيان</p></div>
+        <div class="flashcard-content flashcard-middle"><p>I feel nauseous</p></div>
+        <div class="flashcard-content flashcard-back"><p>J'ai la nausée</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-4" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>ألم أرسلك لتذهبي وتنادي لجدك من أجل العشاء</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Didn't I send you to call Grandpa for dinner?</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ne t'ai-je pas envoyée appeler grand-père pour le dîner ?</p></div>
+        <div class="flashcard-content flashcard-front"><p>أنا صريح</p></div>
+        <div class="flashcard-content flashcard-middle"><p>I'm sincere</p></div>
+        <div class="flashcard-content flashcard-back"><p>Je suis sincère</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-5" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>ذنوب</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Sins</p></div>
-        <div class="flashcard-content flashcard-back"><p>Péchés</p></div>
+        <div class="flashcard-content flashcard-front"><p>أنت سندي</p></div>
+        <div class="flashcard-content flashcard-middle"><p>You, you are my rock</p></div>
+        <div class="flashcard-content flashcard-back"><p>Tu es mon pilier</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-6" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>استطلاع الرأي العام</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Opinion poll</p></div>
-        <div class="flashcard-content flashcard-back"><p>Sondage d'opinion</p></div>
+        <div class="flashcard-content flashcard-front"><p>لم يخلفنا الحظ</p></div>
+        <div class="flashcard-content flashcard-middle"><p>No such luck</p></div>
+        <div class="flashcard-content flashcard-back"><p>Pas de chance</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-7" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>هذا الفيروس قد أظهر لنا العديد من الأمور</p></div>
-        <div class="flashcard-content flashcard-middle"><p>This virus has shown us a lot of things</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ce virus nous a montré beaucoup de choses</p></div>
+        <div class="flashcard-content flashcard-front"><p>ذات مرة</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Once upon a time</p></div>
+        <div class="flashcard-content flashcard-back"><p>Il était une fois</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-8" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>حسنة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Good deed</p></div>
-        <div class="flashcard-content flashcard-back"><p>Bonne action</p></div>
+        <div class="flashcard-content flashcard-front"><p>كذب والدته عندما كانت تتحدث</p></div>
+        <div class="flashcard-content flashcard-middle"><p>He contradicted his mother when she was talking</p></div>
+        <div class="flashcard-content flashcard-back"><p>Il a contredit sa mère quand elle parlait</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-9" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>التفاهة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Insignificance</p></div>
-        <div class="flashcard-content flashcard-back"><p>Insignifiance</p></div>
+        <div class="flashcard-content flashcard-front"><p>طريقة تفكير سطحية جداً</p></div>
+        <div class="flashcard-content flashcard-middle"><p>A very shallow way of thinking, it sees things as mere play</p></div>
+        <div class="flashcard-content flashcard-back"><p>Une manière de penser très superficielle, elle voit les choses comme un simple jeu</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-10" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>الحكومة تفرض القانون</p></div>
-        <div class="flashcard-content flashcard-middle"><p>The government enforces the law</p></div>
-        <div class="flashcard-content flashcard-back"><p>Le gouvernement applique la loi</p></div>
+        <div class="flashcard-content flashcard-front"><p>تحديد</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Delineated</p></div>
+        <div class="flashcard-content flashcard-back"><p>Délimité</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-11" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>إنهم يحاولون تحريف وقائع تاريخية</p></div>
-        <div class="flashcard-content flashcard-middle"><p>They intend to distort historical facts</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ils cherchent à déformer les faits historiques</p></div>
+        <div class="flashcard-content flashcard-front"><p>توسع الإمبراطورية المغولية</p></div>
+        <div class="flashcard-content flashcard-middle"><p>The expansion of the Mongol Empire</p></div>
+        <div class="flashcard-content flashcard-back"><p>L'expansion de l'empire mongol</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-12" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>عندما استولت الجيوش البريطانية على كيبيك عام 1759</p></div>
-        <div class="flashcard-content flashcard-middle"><p>When the British armies captured Quebec in 1759</p></div>
-        <div class="flashcard-content flashcard-back"><p>Lorsque les armées britanniques ont capturé Québec en 1759</p></div>
+        <div class="flashcard-content flashcard-front"><p>عيب</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Flaw</p></div>
+        <div class="flashcard-content flashcard-back"><p>Défaut</p></div>
       </div>
     </div>
 
     <div class="flashcard" id="flashcard-13" onclick="toggleFlipAndRead(this)"
          oncontextmenu="event.preventDefault()">
       <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>عندما تقترب عطلة رأس السنة دائماً نشعر بالسعادة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>When New Year's holiday approaches, we always feel happy</p></div>
-        <div class="flashcard-content flashcard-back"><p>Quand les vacances du Nouvel An approchent, nous ressentons toujours de la joie</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-14" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>يرغبون في استغلال العديد من الأمور على حساب الناس</p></div>
-        <div class="flashcard-content flashcard-middle"><p>They want to exploit many things at the expense of the people</p></div>
-        <div class="flashcard-content flashcard-back"><p>Ils veulent exploiter de nombreuses choses au détriment des gens</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-15" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>تجاهل شخص بازدراء: الرئيس تجاهل كل اقتراح قدمه توم</p></div>
-        <div class="flashcard-content flashcard-middle"><p>The boss snubbed every suggestion Tom made</p></div>
-        <div class="flashcard-content flashcard-back"><p>Le patron a ignoré toutes les suggestions faites par Tom</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-16" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>علم الفلك</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Astronomy</p></div>
-        <div class="flashcard-content flashcard-back"><p>Astronomie</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-17" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>صندوق النقد الدولي</p></div>
-        <div class="flashcard-content flashcard-middle"><p>International Monetary Fund</p></div>
-        <div class="flashcard-content flashcard-back"><p>Fonds monétaire international</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-18" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>جلد</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Leather</p></div>
-        <div class="flashcard-content flashcard-back"><p>Cuir</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-19" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>شارع ضيق</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Narrow street</p></div>
-        <div class="flashcard-content flashcard-back"><p>Rue étroite</p></div>
-      </div>
-    </div>
-
-    <div class="flashcard" id="flashcard-20" onclick="toggleFlipAndRead(this)"
-         oncontextmenu="event.preventDefault()">
-      <div class="flashcard-inner" data-flip="arabic" data-rot="0">
-        <div class="flashcard-content flashcard-front"><p>أجندة سياسية معينة</p></div>
-        <div class="flashcard-content flashcard-middle"><p>Political agenda</p></div>
-        <div class="flashcard-content flashcard-back"><p>Agenda politique</p></div>
+        <div class="flashcard-content flashcard-front"><p>درع بشري</p></div>
+        <div class="flashcard-content flashcard-middle"><p>Human shield</p></div>
+        <div class="flashcard-content flashcard-back"><p>Bouclier humain</p></div>
       </div>
     </div>
 
@@ -382,17 +313,5 @@
     readAloud(inner.querySelector(sel).textContent, next);
   }
   </script>
-
-<p style="margin:20px 0;">
-  <a href="index_en.html">← Back to English index</a>
-</p>
-
-<script>
-  if('serviceWorker' in navigator){
-    window.addEventListener('load',()=>{
-      navigator.serviceWorker.register('./service-worker.js');
-    });
-  }
-</script>
 </body>
 </html>
