--- a/index_en.html
+++ b/index_en.html
@@ -32,6 +32,7 @@
     <ul>
         <li><a href="page1_en.html">PAGE1</a></li>
         <li><a href="page2_en.html">PAGE2</a></li>
+        <li><a href="page3_en.html">PAGE3</a></li>
     </ul>
     <p style="margin-top:30px;"><a href="index.html">← Back to language selection</a></p>
 <script>
